--- a/README.rdoc
+++ b/README.rdoc
@@ -16,4 +16,4 @@ Sample document is in doc/
 
 1. Fork this repo
 2. Make your commits
-3. Send pull request
+3. Send an email with your public repository link
